# docs/swagger/swagger.yaml
@@ -387,6 +387,13 @@ definitions:
       justificativa:
         type: string
     type: object
+  internal_handler.comandaResumoResponse:
+    properties:
+      codigo_fisico:
+        type: string
+      id:
+        type: string
+    type: object
   internal_handler.configurarPrecoPesoRequest:
     properties:
       preco_por_kg:
@@ -460,10 +467,10 @@ definitions:
     type: object
   internal_handler.mesaResponse:
     properties:
-      codigo_fisico:
-        type: string
-      comanda_id:
-        type: string
+      comandas:
+        items:
+          $ref: '#/definitions/internal_handler.comandaResumoResponse'
+        type: array
       id:
         type: string
       identificador:
@@ -1109,9 +1116,9 @@ paths:
       - comandas
   /mesas:
     get:
-      description: Lista todas as mesas do tenant, com a comanda em_uso associada
-        quando houver — usado pelo Garçom pra ver mesas ocupadas e escolher a mesa
-        de destino de uma transferência.
+      description: Lista todas as mesas do tenant, com as comandas em_uso associadas
+        quando houver (uma mesa pode ter mais de uma) — usado pelo Garçom pra ver
+        mesas ocupadas e escolher a mesa de destino de uma transferência.
       produces:
       - application/json
       responses:
